www/css/index.css
/* ... */
/*--------------------------------------------------------------
6.3 Comments
--------------------------------------------------------------*/
.comment-content a {
	word-wrap: break-word;
}

.bypostauthor {
	display: block;
}

/*--------------------------------------------------------------
7.0 Infinite scroll
--------------------------------------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .paging-navigation, /* Older / Newer Posts Navigation (always hidden) */
.infinite-scroll.neverending .site-footer { /* Theme Footer (when set to scrolling) */
	display: none;
}
/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
.infinity-end.neverending .site-footer {
	display: block;
}

/*--------------------------------------------------------------
8.0 Media
--------------------------------------------------------------*/
.page-content img.wp-smiley,
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}

/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}

.wp-caption {
	margin-bottom: 1.5em;
	max-width: 100%;
}

.wp-caption img[class*="wp-image-"] {
	display: block;
	margin: 0 auto;
}

.wp-caption-text {
	text-align: center;
}

.wp-caption .wp-caption-text {
	margin: 0.8075em 0;
}

.gallery {
	margin-bottom: 1.5em;
}

.gallery-item {
	display: inline-block;
	text-align: center;
	vertical-align: top;
	width: 100%;
}

.gallery-columns-2 .gallery-item {
	max-width: 50%;
}

.gallery-columns-3 .gallery-item {
	max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
	max-width: 25%;
}

.gallery-columns-5 .gallery-item {
	max-width: 20%;
}

.gallery-columns-6 .gallery-item {
	max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
	max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
	max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
	max-width: 11.11%;
}

.gallery-caption {
	display: block;
}


/*--------------------------------------------------------------
9.0 Page Layout (Author Styles proceed here)
--------------------------------------------------------------*/

body {
	/* Place your body style here */
}

/* Please specify your container width here. e.g. 978px (PSD width) + 30px (15px left & 15px right - bootstrap gutter) =  1008px
.container {
	max-width: 1008px;
}*/


/* This is for NON-Responsive Container ==
.container {
	max-width: none !important;
	width: 1008px; 
}*/


/* Navbar override styles here */



/*--------------------------------------------------------------
10.0 Misc - Place your modifier's here
--------------------------------------------------------------*/
.half-bottom {margin-bottom: 10px;}
.half-top {margin-top: 10px;}
.add-bottom {margin-bottom: 20px;}
.add-top {margin-top: 20px;}

.nodisplay {display: none;}
/* bootstrap override*/

article .page-header
{
    margin: 0px 0px 20px;
}

article .entry-title
{
    margin: 0px;
}


.navbar-default
{
    background-color: rgb(108, 179, 62);
    border: 0px none;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover
{
    color: rgb(255, 255, 255);
    background-color: rgb(83, 134, 49);
}

.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover
{
    color: rgb(255, 255, 255);
    background-color: transparent;
}

.navbar-default .navbar-brand
{
    color: rgb(255, 255, 255);
}

.navbar-default .navbar-nav > li > a
{
    color: rgb(255, 255, 255);
}

.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover
{
    color: rgb(255, 255, 255);
    background-color: transparent;
}


.btn-success
{
     background-color: rgb(108, 179, 62);
}


.btn-success:active
{
    background-color: rgb(83, 134, 49);
}
/*//bootstrap override*/
body
{
    background-color: rgb(233, 233, 233);
}
.content-cont
{
    margin-top:60px;
    margin-bottom: 60px;

}



.img-container
{
    background-image: url("../img/default-product-image.jpg");
    background-repeat: no-repeat;
    min-width: 100%;
    min-height: auto;
    background-size: 100% auto;
}

.responsiveImage
{
    width:100%;
}


.viewItem , .placeOrder , .saveChanges , .removeFromCart
{
    width:100%;
    min-height:60px;
    font-size:30px;
}

.orderAll
{
    width:60%;
    min-height:60px;
    font-size:30px;
    margin: 10px auto;
    display:block;
}

.viewItem:visited,
.placeOrder:visited,
.saveChanges:visited,
.removeFromCart:visited,
.orderAll:visited
{
    color:#ffffff;
}





.rightmenu
{
    padding-right:15px;
}

.splashscreen-logo
{
    color:#ffffff;
}
.splashscreencont
{
    text-align:center;
}
.scanbtn
{
    display:none;
}



.totalcounter
{ 
    width:100%;
}

.forsingleonly , .foreditorderonly
{
    display:none;
}

.cartItemCont
{
    background-color: rgb(255, 255, 255);
    border-radius: 5px;
    padding: 27px 20px;
    border-bottom: 1px solid #DADADA;
    margin-bottom:20px;
}

.clearfix
{
    clear:both;
}

.oneitemarticle
{
    background-color: rgb(255, 255, 255);
    border-radius: 5px;
    padding: 27px 20px;
    border-bottom: 1px solid #DADADA;
}

.ItemNote
{
    color: rgb(83, 134, 49);
}

.orderAll-row
{
    background-color:#171717;
    position:fixed;
    bottom:0px;
    padding:0px;
    margin:0px;
    width:100%;
    left:0px;
    z-index:100;
}


                            /*Masonry Stuff*/
                            #wrapper
                            {
                                max-width: 60em; /* 960 px */
                                margin: 0 auto;
                            }
/* ... */

